--- a/proj/robocoop/README
+++ b/proj/robocoop/README
@@ -3,8 +3,8 @@ The parse_dir.rb script has to be run under ~falcon as falcon.
 
 Here is how to run the script, taking 20120225 as an example.
 
-[falcon@smfc-ail-02-sr1 logs-twitterweb]$ pwd
-/home/falcon/hostmon/logs-twitterweb
+[falcon@smfc-ail-02-sr1 logs-foobarweb]$ pwd
+/home/falcon/hostmon/logs-foobarweb
 
-[falcon@smfc-ail-02-sr1 logs-twitterweb]$  for i in  $(ls -d 20120225*); do echo $i; ~/liming/parse_dir.rb  $i; done
+[falcon@smfc-ail-02-sr1 logs-foobarweb]$  for i in  $(ls -d 20120225*); do echo $i; ~/liming/parse_dir.rb  $i; done
 
